3o2s/C/comp2425-iml-c3/src/IIml/IImlParser.py
# Generated from IIml.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class IImlParser ( Parser ):

    grammarFileName = "IIml.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'is'", "'size'", "'by'", "'background'", 
                     "'place'", "'at'", "'with'", "'intensity'", "'for'", 
                     "'list'", "'within'", "'('", "')'", "'read'", "'+'", 
                     "'-'", "'*'", "'/'", "'['", "','", "']'", "'circle'", 
                     "'radius'", "'rect'", "'width'", "'height'", "'cross'", 
                     "'plus'", "'number'", "'image'", "'of'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ID", "STRING", "NUMBER", "COMMENT", "WS" ]

    RULE_program = 0
    RULE_command = 1
    RULE_assignStat = 2
    RULE_createImage = 3
    RULE_placeForm = 4
    RULE_forLoop = 5
    RULE_expr = 6
    RULE_shapes = 7
    RULE_types = 8

    ruleNames =  [ "program", "command", "assignStat", "createImage", "placeForm", 
                   "forLoop", "expr", "shapes", "types" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    ID=32
    STRING=33
    NUMBER=34
    COMMENT=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(IImlParser.EOF, 0)

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IImlParser.CommandContext)
            else:
                return self.getTypedRuleContext(IImlParser.CommandContext,i)


        def getRuleIndex(self):
            return IImlParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = IImlParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 5905581604) != 0):
                self.state = 18
                self.command()
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 24
            self.match(IImlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignStat(self):
            return self.getTypedRuleContext(IImlParser.AssignStatContext,0)


        def createImage(self):
            return self.getTypedRuleContext(IImlParser.CreateImageContext,0)


        def placeForm(self):
            return self.getTypedRuleContext(IImlParser.PlaceFormContext,0)


        def forLoop(self):
            return self.getTypedRuleContext(IImlParser.ForLoopContext,0)


        def getRuleIndex(self):
            return IImlParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = IImlParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command)
        try:
            self.state = 30
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 26
                self.assignStat()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 27
                self.createImage()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 28
                self.placeForm()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 29
                self.forLoop()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(IImlParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(IImlParser.ExprContext,0)


        def types(self):
            return self.getTypedRuleContext(IImlParser.TypesContext,0)


        def getRuleIndex(self):
            return IImlParser.RULE_assignStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStat" ):
                listener.enterAssignStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStat" ):
                listener.exitAssignStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStat" ):
                return visitor.visitAssignStat(self)
            else:
                return visitor.visitChildren(self)




    def assignStat(self):

        localctx = IImlParser.AssignStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignStat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1610613760) != 0):
                self.state = 32
                self.types()


            self.state = 35
            self.match(IImlParser.ID)
            self.state = 36
            self.match(IImlParser.T__0)
            self.state = 37
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateImageContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IImlParser.ExprContext)
            else:
                return self.getTypedRuleContext(IImlParser.ExprContext,i)


        def types(self):
            return self.getTypedRuleContext(IImlParser.TypesContext,0)


        def getRuleIndex(self):
            return IImlParser.RULE_createImage

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateImage" ):
                listener.enterCreateImage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateImage" ):
                listener.exitCreateImage(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateImage" ):
                return visitor.visitCreateImage(self)
            else:
                return visitor.visitChildren(self)




    def createImage(self):

        localctx = IImlParser.CreateImageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_createImage)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1610613760) != 0):
                self.state = 39
                self.types()


            self.state = 42
            self.match(IImlParser.T__1)
            self.state = 43
            self.expr(0)
            self.state = 44
            self.match(IImlParser.T__2)
            self.state = 45
            self.expr(0)
            self.state = 46
            self.match(IImlParser.T__3)
            self.state = 47
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlaceFormContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def shapes(self):
            return self.getTypedRuleContext(IImlParser.ShapesContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IImlParser.ExprContext)
            else:
                return self.getTypedRuleContext(IImlParser.ExprContext,i)


        def getRuleIndex(self):
            return IImlParser.RULE_placeForm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlaceForm" ):
                listener.enterPlaceForm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlaceForm" ):
                listener.exitPlaceForm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlaceForm" ):
                return visitor.visitPlaceForm(self)
            else:
                return visitor.visitChildren(self)




    def placeForm(self):

        localctx = IImlParser.PlaceFormContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_placeForm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(IImlParser.T__4)
            self.state = 50
            self.shapes()
            self.state = 51
            self.match(IImlParser.T__5)
            self.state = 52
            self.expr(0)
            self.state = 53
            self.expr(0)
            self.state = 54
            self.match(IImlParser.T__6)
            self.state = 55
            self.match(IImlParser.T__7)
            self.state = 56
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IImlParser.ExprContext)
            else:
                return self.getTypedRuleContext(IImlParser.ExprContext,i)


        def command(self):
            return self.getTypedRuleContext(IImlParser.CommandContext,0)


        def getRuleIndex(self):
            return IImlParser.RULE_forLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForLoop" ):
                listener.enterForLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForLoop" ):
                listener.exitForLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForLoop" ):
                return visitor.visitForLoop(self)
            else:
                return visitor.visitChildren(self)




    def forLoop(self):

        localctx = IImlParser.ForLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_forLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(IImlParser.T__8)
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 59
                self.match(IImlParser.T__9)


            self.state = 62
            self.expr(0)
            self.state = 63
            self.match(IImlParser.T__10)
            self.state = 64
            self.expr(0)
            self.state = 65
            self.command()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IImlParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class VariableExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IImlParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(IImlParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableExpr" ):
                listener.enterVariableExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableExpr" ):
                listener.exitVariableExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableExpr" ):
                return visitor.visitVariableExpr(self)
            else:
                return visitor.visitChildren(self)


    class BinaryOpContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IImlParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IImlParser.ExprContext)
            else:
                return self.getTypedRuleContext(IImlParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinaryOp" ):
                listener.enterBinaryOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinaryOp" ):
                listener.exitBinaryOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinaryOp" ):
                return visitor.visitBinaryOp(self)
            else:
                return visitor.visitChildren(self)


    class ListAccessContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IImlParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IImlParser.ExprContext)
            else:
                return self.getTypedRuleContext(IImlParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListAccess" ):
                listener.enterListAccess(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListAccess" ):
                listener.exitListAccess(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListAccess" ):
                return visitor.visitListAccess(self)
            else:
                return visitor.visitChildren(self)


    class ConvertExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IImlParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def types(self):
            return self.getTypedRuleContext(IImlParser.TypesContext,0)

        def expr(self):
            return self.getTypedRuleContext(IImlParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConvertExpr" ):
                listener.enterConvertExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConvertExpr" ):
                listener.exitConvertExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConvertExpr" ):
                return visitor.visitConvertExpr(self)
            else:
                return visitor.visitChildren(self)


    class StringLiteralContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IImlParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(IImlParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringLiteral" ):
                listener.enterStringLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringLiteral" ):
                listener.exitStringLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringLiteral" ):
                return visitor.visitStringLiteral(self)
            else:
                return visitor.visitChildren(self)


    class ReadInputContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IImlParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(IImlParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadInput" ):
                listener.enterReadInput(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadInput" ):
                listener.exitReadInput(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadInput" ):
                return visitor.visitReadInput(self)
            else:
                return visitor.visitChildren(self)


    class ListExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IImlParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IImlParser.ExprContext)
            else:
                return self.getTypedRuleContext(IImlParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListExpr" ):
                listener.enterListExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListExpr" ):
                listener.exitListExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListExpr" ):
                return visitor.visitListExpr(self)
            else:
                return visitor.visitChildren(self)


    class ParenExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IImlParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(IImlParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenExpr" ):
                listener.enterParenExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenExpr" ):
                listener.exitParenExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenExpr" ):
                return visitor.visitParenExpr(self)
            else:
                return visitor.visitChildren(self)


    class NumberLiteralContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IImlParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(IImlParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberLiteral" ):
                listener.enterNumberLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberLiteral" ):
                listener.exitNumberLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumberLiteral" ):
                return visitor.visitNumberLiteral(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = IImlParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                localctx = IImlParser.ParenExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 68
                self.match(IImlParser.T__11)
                self.state = 69
                self.expr(0)
                self.state = 70
                self.match(IImlParser.T__12)
                pass
            elif token in [14]:
                localctx = IImlParser.ReadInputContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 72
                self.match(IImlParser.T__13)
                self.state = 73
                self.match(IImlParser.STRING)
                pass
            elif token in [10, 29, 30]:
                localctx = IImlParser.ConvertExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 74
                self.types()
                self.state = 75
                self.match(IImlParser.T__11)
                self.state = 76
                self.expr(0)
                self.state = 77
                self.match(IImlParser.T__12)
                pass
            elif token in [19]:
                localctx = IImlParser.ListExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 79
                self.match(IImlParser.T__18)
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 31675929600) != 0):
                    self.state = 80
                    self.expr(0)
                    self.state = 85
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==20:
                        self.state = 81
                        self.match(IImlParser.T__19)
                        self.state = 82
                        self.expr(0)
                        self.state = 87
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 90
                self.match(IImlParser.T__20)
                pass
            elif token in [34]:
                localctx = IImlParser.NumberLiteralContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 91
                self.match(IImlParser.NUMBER)
                pass
            elif token in [32]:
                localctx = IImlParser.VariableExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 92
                self.match(IImlParser.ID)
                pass
            elif token in [33]:
                localctx = IImlParser.StringLiteralContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 93
                self.match(IImlParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 106
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 104
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = IImlParser.BinaryOpContext(self, IImlParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 96
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 97
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 491520) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 98
                        self.expr(8)
                        pass

                    elif la_ == 2:
                        localctx = IImlParser.ListAccessContext(self, IImlParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 99
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 100
                        self.match(IImlParser.T__18)
                        self.state = 101
                        self.expr(0)
                        self.state = 102
                        self.match(IImlParser.T__20)
                        pass

             
                self.state = 108
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ShapesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IImlParser.ExprContext)
            else:
                return self.getTypedRuleContext(IImlParser.ExprContext,i)


        def getRuleIndex(self):
            return IImlParser.RULE_shapes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShapes" ):
                listener.enterShapes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShapes" ):
                listener.exitShapes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShapes" ):
                return visitor.visitShapes(self)
            else:
                return visitor.visitChildren(self)




    def shapes(self):

        localctx = IImlParser.ShapesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_shapes)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.match(IImlParser.T__21)
                self.state = 110
                self.match(IImlParser.T__22)
                self.state = 111
                self.expr(0)
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.match(IImlParser.T__23)
                self.state = 113
                self.match(IImlParser.T__24)
                self.state = 114
                self.expr(0)
                self.state = 115
                self.match(IImlParser.T__25)
                self.state = 116
                self.expr(0)
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 3)
                self.state = 118
                self.match(IImlParser.T__26)
                self.state = 119
                self.match(IImlParser.T__24)
                self.state = 120
                self.expr(0)
                self.state = 121
                self.match(IImlParser.T__25)
                self.state = 122
                self.expr(0)
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 4)
                self.state = 124
                self.match(IImlParser.T__27)
                self.state = 125
                self.match(IImlParser.T__24)
                self.state = 126
                self.expr(0)
                self.state = 127
                self.match(IImlParser.T__25)
                self.state = 128
                self.expr(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def types(self):
            return self.getTypedRuleContext(IImlParser.TypesContext,0)


        def getRuleIndex(self):
            return IImlParser.RULE_types

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypes" ):
                listener.enterTypes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypes" ):
                listener.exitTypes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypes" ):
                return visitor.visitTypes(self)
            else:
                return visitor.visitChildren(self)




    def types(self):

        localctx = IImlParser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_types)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29]:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.match(IImlParser.T__28)
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.match(IImlParser.T__29)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 134
                self.match(IImlParser.T__9)
                self.state = 135
                self.match(IImlParser.T__30)
                self.state = 136
                self.types()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[6] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 7)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 4)
         




